--- a/_layouts/missingpage.html
+++ b/_layouts/missingpage.html
@@ -5,7 +5,7 @@ layout: default
 {% include menubar.html active="" %}
 
 <div style="padding-top: 20px" class="ui container ">
-  <p>I'm sorry, that URL could not be found. Perhaps you were looking for one of the following:</p>
+  <p>Sorry i havent invented time travel yet, so i might not have invented what you are looking for..</p>
 
   <h3>Essays</h3>
   <ul>
